--- a/Day-02/08-task-manager/public/stylesheets/style.css
+++ b/Day-02/08-task-manager/public/stylesheets/style.css
@@ -6,3 +6,13 @@ body {
 a {
   color: #00B7FF;
 }
+
+form.toggle{
+	display: inline;
+}
+
+.completed{
+	color : red;
+	text-decoration: line-through;
+	font-style: italic;
+}
